--- a/transaction/src/main/resources/application.properties
+++ b/transaction/src/main/resources/application.properties
@@ -1,11 +1,6 @@
-
-
-
-
-
 spring.datasource.url=jdbc:mysql://localhost:3306/ewallet_transaction?createTableIfNotExists=true
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=Tomb93raider
 spring.jpa.hibernate.ddl-auto=update
 
 server.port=9091
