Created notification service that send email after transaction

--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,8 @@
 		<module>wallet</module>
 		<module>user</module>
 		<module>transaction</module>
-	</modules>
+        <module>notification</module>
+    </modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
